packages/engine/src/tests/snapshots/engine__tests__partition__broken_broken_then_good_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      22
    ],
    "items": 15,
    "width": 40.6,
    "height": 165.78,
    "x": -20.29,
    "y": 0.0
  }
]
