packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_quotes_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      18,
      34
    ],
    "items": 3,
    "width": 92.56,
    "height": 44.8,
    "x": 0.0,
    "y": 76.88
  }
]
