packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_quotes_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 15,
      "end": 16
    },
    "severity": "warning",
    "message": "unclosed math string; inserted a closing `\"`",
    "hints": []
  }
]
