packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_sub_bracket_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      9
    ],
    "items": 7,
    "width": 32.98,
    "height": 17.93,
    "x": -16.92,
    "y": 0.0
  }
]
