packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_sub_call_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 18,
      "end": 19
    },
    "severity": "warning",
    "message": "empty math attachment; inserted `#none`",
    "hints": []
  }
]
