packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_sub_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      20
    ],
    "items": 6,
    "width": 17.03,
    "height": 18.0,
    "x": -8.51,
    "y": 40.32
  },
  {
    "range": [
      22,
      28
    ],
    "items": 2,
    "width": 54.16,
    "height": 22.4,
    "x": 0.0,
    "y": 76.88
  }
]
