packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_sub_paren_eof_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 7,
    "width": 33.93,
    "height": 18.97,
    "x": 0.0,
    "y": 0.0
  }
]
